Add Torquing soundtrack renderer